--- a/dockerfile_F_MASK
+++ b/dockerfile_F_MASK
@@ -20,4 +20,4 @@ RUN apt-get install -y vnc4server
 RUN printf "password\npassword\n\n" | vncpasswd
 RUN vnc4server
 RUN echo "export DISPLAY=$HOSTNAME:1" >> /etc/bash.bashrc
-RUN mkdir SARWIND_LGMod
+RUN mkdir Fmask_4_3
