--- a/dockerfile_F_MASK
+++ b/dockerfile_F_MASK
@@ -5,7 +5,7 @@ EXPOSE 5901:5901/udp
 
 SHELL ["/bin/bash", "-c"]
 
-RUN apt-get update
+#RUN apt-get update
 #RUN apt-get install -y libxext6
 #RUN apt-get install -y libxt6
 #RUN apt-get install -y libxmu6
